
syntax = "proto3";
package com.topsec.mobiapi.proto;

//分页查询条件
message PageContent {
    int32 pageSize = 1; //每页数据量大小
    int32 currPage   = 2; //当前页码
    int32 totalCount = 3; //总记录数
    int32 totalPage = 4; //总页数
}

message BaseResponse {
    int32 result   = 1; //结果 0 成功，1 失败
    string messsage = 2; //说明（成功）    “结果”
}